Next week will come more...

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "apollo@apollo.com",
+    "Issuer": "apollo@apollo.com",
+    "AccessTokenExpiration": 30,
+    "SecurityKey": "myultrasupersecretkeymyultrasupersecretkey"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
