--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -3,7 +3,7 @@
     "Audience": "apollo@apollo.com",
     "Issuer": "apollo@apollo.com",
     "AccessTokenExpiration": 30,
-    "SecurityKey": "myultrasupersecretkeymyultrasupersecretkey"
+    "SecurityKey": "myultrasupersecretkey@!*/-?+myultrasupersecretkey"
   },
 
   "Logging": {
